--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form action="test.php" method="post">
       <fieldset>
         <label for="search">Search</label>
-        <input placeholder="eg. The Lion King" type="text" name="search" id="search">
+        <input required placeholder="eg. The Lion King" type="text" name="search" id="search">
         <button type="submit">Go</button>
       </fieldset>
     </form>
