--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button type="submit">Go</button>
       </fieldset>
     </form>
+    <ul class="results-js results">
+      <li>Hi</li>
+    </ul>
   </main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
