--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
       </fieldset>
     </form>
     <ul class="results-js results">
-      <li>Hi</li>
     </ul>
+    <section role="region" class="videoModal">
+      <div class="video">
+        
+      </div>
+    </section>
   </main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
