modal for playing video complete

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <form action="test.php" method="post">
       <fieldset>
         <label for="search">Search</label>
-        <input required placeholder="eg. The Lion King" type="text" name="search" id="search">
+        <input required placeholder="eg. The Matrix" type="text" name="search" id="search">
         <button type="submit">Go</button>
       </fieldset>
     </form>
     <ul class="results-js results">
     </ul>
-    <section role="region" class="videoModal">
+    <section role="region" class="videoModal videoModal-js">
       <div class="video">
         
       </div>
