--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Youtube simple search using API">
   <title>Thinkful Tube</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="app.css">
+  
 </head>
 
 <body>
