added more button, style and functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Thinkful Tube</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="app.css">
-  
+
 </head>
 
 <body>
@@ -21,14 +21,17 @@
       <fieldset>
         <label for="search">Search</label>
         <input required placeholder="eg. The Matrix" type="text" name="search" id="search">
-        <button type="submit">Go</button>
+        <button class="searchButton" type="submit">Go</button>
       </fieldset>
     </form>
+
     <ul class="results-js results">
     </ul>
+
+    <button class="more more-js">Show More</button>
     <section role="region" class="videoModal videoModal-js">
       <div class="video">
-        
+
       </div>
     </section>
   </main>
